--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
         width: min-content;
     }
 
-
+    .example-row {
+        margin-bottom: 20px;
+    }
     </style>
     <script type="text/javascript">
     function changeFlexType(e) {
@@ -110,12 +112,12 @@
             <h2>Grid and Float</h2>
             <p>Try to change width of your browser window.</p>
             <div class="container">
-                <div class="row">
+                <div class="row example-row">
                     <div class="col-lg-4 col-md-12 col-sm-12 box red"></div>
                     <div class="col-lg-4 col-md-6 col-sm-12 box green"></div>
                     <div class="col-lg-4 col-md-6 col-sm-12 box blue"></div>
                 </div>
-                <div class="row clearfix">
+                <div class="row clearfix example-row">
                     <div class="col-lg-4 col-md-2 col-sm-1 pull-left box red"></div>
                     <div class="col-lg-4 col-md-2 col-sm-1 pull-right box green"></div>
                 </div>
